--- a/styles/style.css
+++ b/styles/style.css
@@ -324,14 +324,14 @@ h1 {
   font-size: 5.3rem;
   margin-top: 0.1em;
   margin-bottom: 0.2em;
-  padding-right: 25px;
+  padding-right: 15px;
   line-height: 1;
 }
 
 h2 {
   font-size: 3.2rem;
   font-weight: 600;
-  padding-right: 25px;
+  padding-right: 15px;
 }
 
 h3 {
@@ -351,6 +351,7 @@ a.button {
   font-size: 1.2rem;
 }
 
+/* special thank you to Typed.CSS (https://typedcss.com/) for this animation */
 * {
   margin: 0;
   padding: 0;
@@ -429,12 +430,18 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   padding-bottom: 60px;
 }
 
 .accent-line {
-  display: inline-block;
+  display: inline;
   width: 100%;
   height: 1px;
   background-color: #082340;
@@ -484,7 +491,7 @@ section {
 
 .hero-area {
   position: absolute;
-  top: 20%;
+  top: 25%;
   width: 100%;
 }
 
@@ -998,7 +1005,7 @@ section {
 
 .hero-scroll {
   position: absolute;
-  bottom: 60px;
+  bottom: 40px;
   width: 200px;
   margin: 0 auto;
   display: block;
@@ -1080,7 +1087,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 60%;
+  width: 80%;
 }
 
 .about-image {
@@ -1119,11 +1126,6 @@ section {
   transition: -webkit-box-shadow 0.5s;
   transition: box-shadow 0.5s;
   transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
-}
-
-.project-2 .project-image img:hover, .project-2 .project-image img:focus {
-  -webkit-box-shadow: -5px 5px #984638;
-          box-shadow: -5px 5px #984638;
 }
 
 .project-description {
@@ -1384,6 +1386,46 @@ li {
 }
 
 @media (max-width: 1100px) {
+  .skill-container {
+    width: 33.3333333333%;
+  }
+  .skill-icon {
+    font-size: 3rem;
+    padding-bottom: 15px;
+  }
+  .project-description {
+    padding: 30px;
+  }
+  .contact-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-container .contact-text,
+.contact-container .contact-form {
+    width: 100%;
+  }
+  .contact-container .contact-text {
+    padding-left: 0;
+  }
+  .contact-container .social-nav {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 930px) {
+  h1 {
+    font-size: 4.8rem;
+  }
+  h2 {
+    font-size: 2.8rem;
+  }
+  h3 {
+    font-size: 2.2rem;
+  }
+  h4 {
+    font-size: 1.8rem;
+  }
   .about-section {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -1412,46 +1454,6 @@ li {
         align-self: flex-start;
     margin-bottom: 30px;
   }
-  .skill-container {
-    width: 33.3333333333%;
-  }
-  .skill-icon {
-    font-size: 3rem;
-    padding-bottom: 15px;
-  }
-  .project-description {
-    padding: 30px;
-  }
-  .contact-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .contact-container .contact-text,
-.contact-container .contact-form {
-    width: 100%;
-  }
-  .contact-container .contact-text {
-    padding-left: 0;
-  }
-  .contact-container .social-nav {
-    margin-bottom: 40px;
-  }
-}
-@media (max-width: 900px) {
-  h1 {
-    font-size: 4.8rem;
-  }
-  h2 {
-    font-size: 2.8rem;
-  }
-  h3 {
-    font-size: 2.2rem;
-  }
-  h4 {
-    font-size: 1.8rem;
-  }
   .project {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1461,6 +1463,9 @@ li {
   .project .project-image,
 .project .project-description {
     width: 100%;
+  }
+  .project .project-image {
+    margin-bottom: 10px;
   }
   .project-2, .project-4 {
     -webkit-box-orient: vertical;
