--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,4 +1,4 @@
-// Custom font 
+/* custom heading font */
 @font-face {
     font-family: 'Sprat';
     src: url(../assets/fonts/Sprat-RegularBold.otf);
@@ -10,26 +10,21 @@ $headingFont: 'Sprat';
 $bodyFont: 'Montserrat', sans-serif;
 
 /* colors */
+
 // default light mode theme
 $surface-primary: #FDFAF5;
 $surface-secondary: #F0EBE4;
 $text-primary: #082340;
 
-/// dark mode inverted theme
-/// 
+$accent-blue: #168CFA;
 
+// dark mode inverted theme
 
 $inverted-surface-primary: #082340;
 $inverted-surface-secondary: #1B2126;
 $inverted-text-primary: #F5F2ED;
 
-$accent-blue: #168CFA;
-// $accent-blue: #ee8d0f;
 
-$orange: #FFC065;
-$pink: #FE6564;
-$green: #04897C;
-$red: #C44029;
-$beige: #C89D8D;
+
 
 
