--- a/styles/sass/_base-styles.scss
+++ b/styles/sass/_base-styles.scss
@@ -35,7 +35,7 @@ a.button {
     padding: 12px 24px;
     box-shadow: none;
     cursor: pointer;
-    transition: box-shadow 200ms ease;
+    transition: box-shadow 0.2s ease;
     &:hover, &:focus {
         box-shadow: -3px 3px 0 0 $accent-blue;
     }
@@ -50,11 +50,11 @@ a.button {
     padding: 0;
     border-color: transparent;
     background-color: transparent;
-    transition-property: text-shadow;
+    transition: text-shadow 0.2s ease;
     color: $text-primary;
-    &:hover, &:focus {
-    box-shadow: none;
-    text-shadow: -1px 1px 0 $accent-blue;
+    &:hover, &:focus, &:active {
+        box-shadow: none;
+        text-shadow: -1px 1px 0 0 $accent-blue;
     }
 }
 
