--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,5 +1,4 @@
 
-
 footer {
     border-top: 1px solid black;
     height: 80px;
@@ -9,11 +8,10 @@ footer {
             padding: 20px;
         }
     a {
-        &:hover, &:focus {
+        &:hover, &:focus, &:active {
             text-decoration: solid underline $accent-blue 3px;
             text-underline-offset: 12px;
         }
-
         p.top-link {
             font-weight: 700;
         }
