--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -1,14 +1,3 @@
-// .projects {
-//     // border-top: 4px solid black;
-//     background-color: #F3F3F5;
-// }
-
-// .projects-container { 
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     padding: 80px;
-// }
 
 .project {
     display: flex;
@@ -16,20 +5,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-
-    //     flex-direction: column;
-    //     justify-content: center;
-    //     align-items: center;
-    //     border: 1px solid $text-primary;
-    //     box-shadow: -5px 5px $text-primary;
-    //     padding: 40px;
-    //     text-align: center;
-    //     transition: 0.4s;
-    //     &:hover, &:focus {
-    //         box-shadow: -10px 10px $accent-blue;
-    //     }
-    }
-
+}
 
 .project-image {
     width: 35%;
@@ -38,38 +14,12 @@
         display: inline-block;
         box-shadow: none;
         transition: box-shadow 0.5s;
-        // &:hover {
-        //     box-shadow: -5px 5px #e4a436;
-        // }
     }
 }
-
-
-// .image-wrapper {
-//     position: relative;
-//     transition: color .2s;
-// }
-
-// .image-shadow {
-//   position: absolute;
-//   left: 0;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   z-index: 0;
-//   opacity: .5;
-//   filter: blur(20px);
-//   transform: translate(0,2%) scale(1.02);
-// }
-
-// .image-card {
-//   position: relative;
-// }
 
 .project-description {
     width: 60%;
     background-color: $surface-secondary;
-    // border: 1px solid $text-primary;
     padding: 50px;
     p {
         padding: 20px 0;
@@ -80,7 +30,6 @@
             margin-right: 20px;
         }
     }
-
 }
 
 .tools-used {
@@ -89,10 +38,11 @@
     justify-content: flex-start;
     li {
         font-size: 0.8rem;
-        border: 1px solid black;
+        border: 1px solid $text-primary;
         padding: 2px 4px;
         margin: 0 6px 6px 0;
-        &:hover, &:focus {
+        transition: border 0.2s, color 0.2s;
+        &:hover, &:focus, &:active {
             border: 1px solid $accent-blue;
             color: $accent-blue;
         }
