--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -1,7 +1,3 @@
-// .skills  {
-//     background-color: $surface-secondary;
-//     // border-top: 4px solid black;
-// }
 
 .skills-container {
     display: flex;
@@ -12,7 +8,6 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    // margin: 40px;
 }
 
 .skill-container {
@@ -23,17 +18,10 @@
     align-items: center;
     padding: 20px;
     text-align: center;
-    // p {
-    //     visibility: hidden;
-    // }
     &:hover, &:focus, &:active {
         transition: 0.4s;
         color: $accent-blue;
-        animation: shakeX;
-        animation-duration: 2s;
-        // p {
-        //     visibility: visible;
-        // }
+        animation: shakeX 2s;
     }
 }
 
