--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,3 +1,4 @@
+
 html {
     font-size: 125%;
     line-height: 1.15;
@@ -14,7 +15,7 @@ body {
 h1, h2, h4 {
     font-family: $headingFont;
     line-height: 110%;
-    // font-weight: 400;
+    font-weight: 700;
 }
 
 h1 {
@@ -25,39 +26,11 @@ h1 {
     line-height: 1;
 
 }
-    // h3::before {
-//     content: "";
-//     position: absolute;
-//     left: 7%;
-//     bottom: 10px;
-//     width: 200px;
-//     height: 14px;
-//     transform: skew(-12deg) translateX(-50%);
-//     background: rgba(238,111,87,0.5);
-//     z-index: -1;
-// }
-
-// .contact-title::before {
-//     content: "";
-//     position: absolute;
-//     left: 7%;
-//     bottom: 10px;
-//     width: 200px;
-//     height: 14px;
-//     transform: skew(-12deg) translateX(-50%);
-//     background: rgba(238,111,87,0.5);
-//     z-index: -1;
-// }
-
-// h2, h3 {
-//     font-weight: 600;
-// }
 
 h2 {
     font-size: 3.2rem;
     font-weight: 600;
     padding-right: 15px;
-
 }
 
 h3 {
@@ -65,13 +38,11 @@ h3 {
     font-weight: 300;
     font-size:  2.7rem;
     line-height: 125%;
-
 }
 
 h4 {
     font-size: 2rem;
 }
-
 
 button,
 a.button {
