--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -8,6 +8,8 @@
 }
 
 .desktop-nav {
+    // position: fixed;
+    // top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
